// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IP Pools List Page should render loading component when loading data 1`] = `<Loading />`;

exports[`IP Pools List Page should render row properly 1`] = `
Array [
  <Link
    replace={false}
    to="/account/ip-pools/edit/my-pool"
  >
    My Pool
  </Link>,
  "my-pool",
  "3",
]
`;

exports[`IP Pools List Page should render the list page correctly 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Purchase dedicated IPs to manage your IP Pools
      </p>,
      "image": "Setup",
      "primaryAction": Object {
        "Component": [Function],
        "content": "Purchase IPs",
        "to": "/account/billing",
      },
      "secondaryAction": Object {
        "Component": [Function],
        "content": "Create IP Pool",
        "to": "/account/ip-pools/create",
      },
      "show": false,
      "title": "Boost your deliverability",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create IP Pool",
      "to": "/account/ip-pools/create",
    }
  }
  title="IP Pools"
>
  <TableCollection
    columns={
      Array [
        "Name",
        "ID",
        "Number of IPs Assigned",
      ]
    }
    defaultSortColumn={null}
    defaultSortDirection="asc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "name",
          "id",
        ],
        "itemToStringKeys": Array [
          "name",
          "id",
        ],
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "id": 101,
          "ips": Array [
            Object {
              "external_ip": 1111,
            },
            Object {
              "external_ip": 2222,
            },
          ],
          "name": "Test Pool 1",
        },
        Object {
          "id": 102,
          "ips": Array [],
          "name": "Test Pool 2",
        },
      ]
    }
  />
</Page>
`;

exports[`IP Pools List Page should show alert upon error 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Purchase dedicated IPs to manage your IP Pools
      </p>,
      "image": "Setup",
      "primaryAction": Object {
        "Component": [Function],
        "content": "Purchase IPs",
        "to": "/account/billing",
      },
      "secondaryAction": Object {
        "Component": [Function],
        "content": "Create IP Pool",
        "to": "/account/ip-pools/create",
      },
      "show": false,
      "title": "Boost your deliverability",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create IP Pool",
      "to": "/account/ip-pools/create",
    }
  }
  title="IP Pools"
>
  <ApiErrorBanner
    errorDetails="Uh oh! It broke."
    message="Sorry, we seem to have had some trouble loading your ip pools."
    reload={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
  />
</Page>
`;
